--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body
 .top
 {
 
-  height:100vh;
+  height:600px;
  background-image: url(images/FoodImg1.png);
   background-size: 100% 200%;
   background-repeat: no-repeat;
